# UserManagerQt

./: CMakeLists.txt  README.md
UserManagerQt/: CMakeLists.txt  addUserToGroupWindow.cpp  changePasswordWindow.cpp  createGroupWindow.cpp  main.cpp  mainWindow.cpp
UserManagerQt/includes/: AddUserToGroupWindow.h  ChangePasswordWindow.h  CreateGroupWindow.h  MainHeader.h  MainWindow.h
